--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ accompanistPermissions = "0.35.0-alpha"
 kirich = "1.5.9"
 daggerHiltVersion = "2.51.1"
 roomVersion = "2.6.1"
+kspVersion = "1.9.10-1.0.13"
 
 [libraries]
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -45,5 +46,6 @@ dagger-compiler = { group = "com.google.dagger", name = "hilt-android-compiler",
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 dagger = { id = "com.google.dagger.hilt.android", version.ref = "daggerHiltVersion" }
+devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
 
 
